--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <header>
-    <h1>Expendition</h1>
+    <h1 style="color:green">Login page</h1>
+    <p>this is my login form branch.</p>
+    <h3>Experiment purpose</h3>
+    <p>Lorem ipsum dolor sit.</p>
 </header>
     <script src="js/app.js"></script>
 </body>
